crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__data_planes__tests__data_planes_with_private_links.snap
---
source: crates/control-plane-api/src/server/public/graphql/data_planes.rs
expression: response
---
{
  "data": {
    "dataPlanes": {
      "edges": [
        {
          "node": {
            "awsLinkEndpoints": [
              {
                "dns_entries": [
                  {
                    "dns_name": "vpce-0123abc.vpce-svc-abc123.us-east-1.vpce.amazonaws.com",
                    "hosted_zone_id": "Z7HUB22EVRPK5"
                  }
                ],
                "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-abc123"
              }
            ],
            "azureLinkEndpoints": [],
            "gcpPscEndpoints": [],
            "name": "ops/dp/private/aliceCo/aws-us-east-1-c1",
            "privateLinks": [
              {
                "config": {
                  "__typename": "AWSPrivateLink",
                  "azIds": [
                    "use1-az1",
                    "use1-az2"
                  ],
                  "region": "us-east-1",
                  "serviceName": "com.amazonaws.vpce.us-east-1.vpce-svc-abc123"
                },
                "details": {
                  "dns_entries": [
                    {
                      "dns_name": "vpce-0123abc.vpce-svc-abc123.us-east-1.vpce.amazonaws.com",
                      "hosted_zone_id": "Z7HUB22EVRPK5"
                    }
                  ],
                  "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-abc123"
                },
                "id": "0000000000000a01",
                "status": "PROVISIONED"
              },
              {
                "config": {
                  "__typename": "AzurePrivateLink",
                  "dnsName": "privatelink.database.windows.net",
                  "location": "eastus",
                  "resourceType": null,
                  "serviceName": "/subscriptions/x/resourceGroups/rg/providers/Microsoft.Network/privateLinkServices/svc"
                },
                "details": null,
                "id": "0000000000000a02",
                "status": "PENDING"
              },
              {
                "config": {
                  "__typename": "GCPPrivateServiceConnect",
                  "allPorts": true,
                  "dnsRecordNames": [
                    "r1",
                    "r2"
                  ],
                  "dnsZoneName": "z",
                  "region": "us-central1",
                  "serviceAttachment": "projects/p/regions/us-central1/serviceAttachments/sa"
                },
                "details": null,
                "id": "0000000000000a03",
                "status": "PENDING"
              }
            ]
          }
        },
        {
          "node": {
            "awsLinkEndpoints": [],
            "azureLinkEndpoints": [],
            "gcpPscEndpoints": [],
            "name": "ops/dp/public/aws-us-west-2-c1",
            "privateLinks": []
          }
        },
        {
          "node": {
            "awsLinkEndpoints": [],
            "azureLinkEndpoints": [],
            "gcpPscEndpoints": [],
            "name": "ops/dp/public/gcp-us-central1-c2",
            "privateLinks": []
          }
        }
      ]
    }
  }
}
