crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__data_planes__tests__graphql_data_planes.snap
---
source: crates/control-plane-api/src/server/public/graphql/data_planes.rs
expression: response
---
{
  "data": {
    "dataPlanes": {
      "edges": [
        {
          "node": {
            "awsIamUserArn": "arn:aws:iam::123456789:user/test",
            "azureApplicationClientId": "11111111-1111-1111-1111-111111111111",
            "azureApplicationName": "estuary-test-app-one",
            "cidrBlocks": [
              "10.0.0.0/16",
              "192.168.1.0/24"
            ],
            "cloudProvider": "AWS",
            "fqdn": "dp.one",
            "gcpServiceAccountEmail": "test-gcp-one@estuary-test.iam.gserviceaccount.com",
            "id": "111111fffe111111",
            "isPublic": true,
            "name": "ops/dp/public/aws-us-west-2-c1",
            "reactorAddress": "reactor.dp.one",
            "region": "us-west-2",
            "tag": "c1",
            "userCapability": "read"
          }
        },
        {
          "node": {
            "awsIamUserArn": "arn:aws:iam::987654321:user/test",
            "azureApplicationClientId": "22222222-2222-2222-2222-222222222222",
            "azureApplicationName": "estuary-test-app-two",
            "cidrBlocks": [
              "172.16.0.0/12"
            ],
            "cloudProvider": "GCP",
            "fqdn": "dp.two",
            "gcpServiceAccountEmail": "test-gcp-two@estuary-test.iam.gserviceaccount.com",
            "id": "222222fffe222222",
            "isPublic": true,
            "name": "ops/dp/public/gcp-us-central1-c2",
            "reactorAddress": "reactor.dp.two",
            "region": "us-central1",
            "tag": "c2",
            "userCapability": "read"
          }
        }
      ]
    }
  }
}
