crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__data_planes__tests__mask_add_data_plane_private_link_manage_data_plane_delegate.snap
---
source: crates/control-plane-api/src/server/public/graphql/data_planes.rs
assertion_line: 2257
expression: response
---
{
  "data": {
    "addDataPlanePrivateLink": {
      "config": {
        "__typename": "AWSPrivateLink",
        "serviceName": "com.amazonaws.vpce.us-east-1.vpce-svc-new999"
      },
      "id": "[id]",
      "status": "PENDING"
    }
  },
  "errors": null
}
