crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__data_planes__tests__mask_data_planes_billing.snap
---
source: crates/control-plane-api/src/server/public/graphql/data_planes.rs
assertion_line: 2168
expression: response
---
{
  "data": {
    "dataPlanes": {
      "edges": []
    }
  },
  "errors": null
}
