crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__data_planes__tests__mask_data_planes_viewer_delegate.snap
---
source: crates/control-plane-api/src/server/public/graphql/data_planes.rs
assertion_line: 2158
expression: response
---
{
  "data": {
    "dataPlanes": {
      "edges": [
        {
          "node": {
            "name": "ops/dp/private/aliceCo/aws-us-east-1-c1"
          }
        },
        {
          "node": {
            "name": "ops/dp/public/aws-us-west-2-c1"
          }
        },
        {
          "node": {
            "name": "ops/dp/public/gcp-us-central1-c2"
          }
        }
      ]
    }
  },
  "errors": null
}
