crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__data_planes__tests__mask_remove_data_plane_private_link_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/data_planes.rs
assertion_line: 2356
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "private link '0000000000000a01' not found",
      "path": [
        "removeDataPlanePrivateLink"
      ]
    }
  ]
}
